# shop-model

./: README.md  pyproject.toml
shop/: db.sqlite3
shop/app/: models.py
shop/app/migrations/: 0001_initial.py
shop/shop/: settings.py
